# Expert-Base-Builder

./: .gitignore  README.md  build_expert_base.py  build_expertbase.py  extend_expert_base.py  pyproject.toml  run.py
data/: orcids.csv  property_extension.csv  tadirah_tooltips.json
expert_base_builder/: __init__.py  expert.py  expert_base.py  llm_transformer.py  orcid_aggregator.py
expertbase_builder/: __init__.py  expert.py  expertbase.py  orcid_aggregator.py
html/: expert-template.qmd
